src/objects/Scoping__c.object
<CustomObject>
    <fields>
        <fullName>Account_Area__c</fullName>
        <formula>Opportunity__r.Account.Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Opportunity__r.Account.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Theater__c</fullName>
        <formula>Opportunity__r.Account.Theater__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scopings</relationshipLabel>
        <relationshipName>Scopings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Scoper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Scoper</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Scopings (Primary Scoper)</relationshipLabel>
        <relationshipName>Scopings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scoping_Date__c</fullName>
        <label>Scoping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Scoper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Scoper</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Scopings (Secondary Scoper)</relationshipLabel>
        <relationshipName>Scopings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>AppTx</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scoping</label>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Scoping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scopings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AMER_PCFS_Scopings_Needs_Scheduling</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Primary_Scoper__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Platform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Account_Area__c</field>
            <operation>contains</operation>
            <value>AMER,Federal,Global</value>
        </filters>
        <label>AMER PCFS Scopings (Needs Scheduling)</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Scopings</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Scopings</label>
    </listViews>
    <listViews>
        <fullName>AppTx_Scopings_All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AppTX</value>
        </filters>
        <label>AppTx Scopings (All)</label>
    </listViews>
    <listViews>
        <fullName>AppTx_Scopings_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AppTX</value>
        </filters>
        <label>AppTx Scopings (Cancelled)</label>
    </listViews>
    <listViews>
        <fullName>AppTx_Scopings_Completed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AppTX</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>AppTx Scopings (Completed)</label>
    </listViews>
    <listViews>
        <fullName>AppTx_Scopings_Needs_Scheduling</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AppTX</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>AppTx Scopings (Needs Scheduling)</label>
    </listViews>
    <listViews>
        <fullName>AppTx_Scopings_Outstanding</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AppTX</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested,Scheduled</value>
        </filters>
        <label>AppTx Scopings (Outstanding)</label>
    </listViews>
    <listViews>
        <fullName>Labs_Scopings_All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Labs</value>
        </filters>
        <label>Labs Scopings (All)</label>
    </listViews>
    <listViews>
        <fullName>Labs_Scopings_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Labs</value>
        </filters>
        <label>Labs Scopings (Cancelled)</label>
    </listViews>
    <listViews>
        <fullName>Labs_Scopings_Completed</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Labs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Labs Scopings (Completed)</label>
    </listViews>
    <listViews>
        <fullName>Labs_Scopings_Needs_Scheduling</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Labs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Labs Scopings (Needs Scheduling)</label>
    </listViews>
    <listViews>
        <fullName>Labs_Scopings_Outstanding</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Labs</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested,Scheduled</value>
        </filters>
        <label>Labs Scopings (Outstanding)</label>
    </listViews>
    <listViews>
        <fullName>Platform_Scopings_All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Platform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested,Scheduled</value>
        </filters>
        <filters>
            <field>Account_Area__c</field>
            <operation>notEqual</operation>
            <value>EMEA Central</value>
        </filters>
        <filters>
            <field>Account_Area__c</field>
            <operation>notEqual</operation>
            <value>EMEA Emerging Area</value>
        </filters>
        <label>Platform Scopings (All)</label>
    </listViews>
    <listViews>
        <fullName>Platform_Scopings_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Scoping_Date__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Area__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Platform</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Platform Scopings (Cancelled)</label>
    </listViews>
    <validationRules>
        <fullName>scoping_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>and(
isblank( Scoping_Date__c )
,
or(
ispickval( Status__c , "scheduled"),
ispickval( Status__c , "completed")
)
)</errorConditionFormula>
        <errorMessage>Scoping Date / Time is required when Status is Scheduled or Completed</errorMessage>
    </validationRules>
</CustomObject>